fix(dlr): harden PostgreSQL persistence
Signed-off-by: pavlos <pavlos@cytech.gr>