@@ -1,6 +1,8 @@
 package gr.cytech.sendium.core.worker;
 
 import gr.cytech.sendium.core.message.StandardMessage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.sql.DataSource;
 import java.sql.Array;
@@ -8,19 +10,29 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.sql.Statement;
-import java.sql.Timestamp;
 import java.sql.Types;
+import java.time.Instant;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.IdentityHashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public class PostgresqlDlrStorage implements DlrStorage {
+    private static final Logger logger = LoggerFactory.getLogger(PostgresqlDlrStorage.class);
+
     private static final int DEFAULT_LINK_MAX_ATTEMPTS = 20;
     private static final long DEFAULT_LINK_RETRY_INTERVAL_MILLIS = 200;
     private static final long EXPIRY_CHECK_INTERVAL_MILLIS = TimeUnit.HOURS.toMillis(1);
@@ -28,14 +40,15 @@ public class PostgresqlDlrStorage implements DlrStorage {
     private static final String SAVE_INITIAL_STATE_SQL = """
             INSERT INTO sendium_dlr.tracked_message
                 (gateway_message_id, account_id, system_id, source_address, destination_address,
-                 operator_message_id, forward_dlr_url, reassembled_parts, status, updated_at)
-            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+                 provider_name, provider_message_id, forward_dlr_url, reassembled_parts, status, updated_at)
+            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
             ON CONFLICT (gateway_message_id) DO UPDATE SET
                 account_id = EXCLUDED.account_id,
                 system_id = EXCLUDED.system_id,
                 source_address = EXCLUDED.source_address,
                 destination_address = EXCLUDED.destination_address,
-                operator_message_id = EXCLUDED.operator_message_id,
+                provider_name = EXCLUDED.provider_name,
+                provider_message_id = EXCLUDED.provider_message_id,
                 forward_dlr_url = EXCLUDED.forward_dlr_url,
                 reassembled_parts = EXCLUDED.reassembled_parts,
                 status = EXCLUDED.status,
@@ -45,27 +58,52 @@ public class PostgresqlDlrStorage implements DlrStorage {
 
     private static final String LINK_MESSAGE_SQL = """
             UPDATE sendium_dlr.tracked_message
-            SET operator_message_id = ?, status = 'SENT', updated_at = CURRENT_TIMESTAMP
+            SET provider_name = ?, provider_message_id = ?, status = 'SENT', updated_at = CURRENT_TIMESTAMP
             WHERE gateway_message_id = ?
             """;
 
+    private static final String LOCK_MESSAGE_SQL = """
+            SELECT 1
+            FROM sendium_dlr.tracked_message
+            WHERE gateway_message_id = ?
+            FOR UPDATE
+            """;
+
+    private static final String LOCK_CORRELATION_SQL = """
+            SELECT pg_advisory_xact_lock(hashtextextended(?, 0) # hashtextextended(?, 1))
+            """;
+
+    private static final String GET_CORRELATION_OWNER_SQL = """
+            SELECT gateway_message_id
+            FROM sendium_dlr.provider_correlation
+            WHERE provider_name = ? AND provider_message_id = ?
+            """;
+
     private static final String SAVE_CORRELATION_SQL = """
-            INSERT INTO sendium_dlr.operator_correlation
-                (operator_message_id, gateway_message_id)
-            VALUES (?, ?)
-            ON CONFLICT (operator_message_id) DO UPDATE SET
-                created_at = CURRENT_TIMESTAMP
-            WHERE operator_correlation.gateway_message_id = EXCLUDED.gateway_message_id
+            WITH saved_correlation AS (
+                INSERT INTO sendium_dlr.provider_correlation
+                    (provider_name, provider_message_id, gateway_message_id)
+                VALUES (?, ?, ?)
+                ON CONFLICT (provider_name, provider_message_id) DO UPDATE SET
+                    gateway_message_id = EXCLUDED.gateway_message_id,
+                    created_at = CURRENT_TIMESTAMP
+                RETURNING gateway_message_id
+            )
+            UPDATE sendium_dlr.tracked_message
+            SET provider_name = NULL, provider_message_id = NULL, updated_at = CURRENT_TIMESTAMP
+            WHERE provider_name = ? AND provider_message_id = ?
+              AND gateway_message_id <> ?
+              AND EXISTS (SELECT 1 FROM saved_correlation)
             """;
 
     private static final String DELETE_CORRELATIONS_SQL = """
-            DELETE FROM sendium_dlr.operator_correlation
+            DELETE FROM sendium_dlr.provider_correlation
             WHERE gateway_message_id = ?
             """;
 
     private static final String GET_STATE_SQL = """
             SELECT tm.gateway_message_id, tm.account_id, tm.system_id, tm.source_address,
-                   tm.destination_address, tm.operator_message_id, tm.forward_dlr_url,
+                   tm.destination_address, tm.provider_name, tm.provider_message_id, tm.forward_dlr_url,
                    tm.reassembled_parts, tm.status, tm.updated_at
             FROM sendium_dlr.tracked_message tm
             WHERE tm.gateway_message_id = ?
@@ -74,12 +112,14 @@ public class PostgresqlDlrStorage implements DlrStorage {
     private static final String RESOLVE_STATE_SQL = """
             SELECT tm.gateway_message_id, tm.account_id, tm.system_id, tm.source_address,
                    tm.destination_address, tm.forward_dlr_url, tm.reassembled_parts,
-                   correlation.operator_message_id, CURRENT_TIMESTAMP AS resolved_at
-            FROM sendium_dlr.operator_correlation correlation
+                   correlation.provider_name, correlation.provider_message_id,
+                   CURRENT_TIMESTAMP AS resolved_at
+            FROM sendium_dlr.provider_correlation correlation
             JOIN sendium_dlr.tracked_message tm
                 ON tm.gateway_message_id = correlation.gateway_message_id
-            WHERE correlation.operator_message_id = ?
-            FOR UPDATE OF tm, correlation
+            WHERE correlation.provider_name = ? AND correlation.provider_message_id = ?
+              AND correlation.gateway_message_id = ?
+            FOR UPDATE OF correlation
             """;
 
     private static final String DELETE_STATE_SQL = """
@@ -94,20 +134,28 @@ public class PostgresqlDlrStorage implements DlrStorage {
             """;
 
     private static final String DELETE_EXPIRED_CORRELATIONS_SQL = """
-            DELETE FROM sendium_dlr.operator_correlation
+            DELETE FROM sendium_dlr.provider_correlation
             WHERE created_at < CURRENT_TIMESTAMP - INTERVAL '3 days'
             """;
 
     private static final String DELETE_EXPIRED_MESSAGES_SQL = """
-            DELETE FROM sendium_dlr.tracked_message
-            WHERE created_at < CURRENT_TIMESTAMP - INTERVAL '7 days'
+            WITH expired_messages AS (
+                SELECT gateway_message_id
+                FROM sendium_dlr.tracked_message
+                WHERE created_at < CURRENT_TIMESTAMP - INTERVAL '7 days'
+                ORDER BY gateway_message_id
+                FOR UPDATE
+            )
+            DELETE FROM sendium_dlr.tracked_message message
+            USING expired_messages expired
+            WHERE message.gateway_message_id = expired.gateway_message_id
             """;
 
     private static final String SAVE_UNPUSHED_DLR_SQL = """
             INSERT INTO sendium_dlr.unpushed_dlr
                 (dlr_key, system_id, account_id, source_address, destination_address, serial,
-                 message_id, dlr_state, error_code, acked, priority, reassembled_parts)
-            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+                 message_id, dlr_state, error_code, acked, priority, reassembled_parts, generation_id)
+            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
             ON CONFLICT (dlr_key) DO UPDATE SET
                 system_id = EXCLUDED.system_id,
                 account_id = EXCLUDED.account_id,
@@ -120,12 +168,13 @@ public class PostgresqlDlrStorage implements DlrStorage {
                 acked = EXCLUDED.acked,
                 priority = EXCLUDED.priority,
                 reassembled_parts = EXCLUDED.reassembled_parts,
+                generation_id = EXCLUDED.generation_id,
                 created_at = CURRENT_TIMESTAMP
             """;
 
     private static final String GET_UNPUSHED_DLRS_SQL = """
             SELECT dlr_key, system_id, account_id, source_address, destination_address, serial,
-                   message_id, dlr_state, error_code, acked, priority, reassembled_parts
+                   message_id, dlr_state, error_code, acked, priority, reassembled_parts, generation_id
             FROM sendium_dlr.unpushed_dlr
             WHERE system_id = ?
             ORDER BY created_at, dlr_key
@@ -133,13 +182,13 @@ public class PostgresqlDlrStorage implements DlrStorage {
 
     private static final String DELETE_UNPUSHED_DLR_SQL = """
             DELETE FROM sendium_dlr.unpushed_dlr
-            WHERE dlr_key = ?
+            WHERE dlr_key = ? AND generation_id = ?
             """;
 
     private static final String DELETE_EXPIRED_UNPUSHED_DLRS_SQL = """
             DELETE FROM sendium_dlr.unpushed_dlr
             WHERE created_at < CURRENT_TIMESTAMP - INTERVAL '7 days'
-            RETURNING dlr_key
+            RETURNING dlr_key, generation_id
             """;
 
     private final DataSource dataSource;
@@ -147,7 +196,9 @@ public class PostgresqlDlrStorage implements DlrStorage {
     private final long linkRetryIntervalMillis;
     private final long expiryCheckIntervalMillis;
     private final Object unpushedDlrStateLock = new Object();
-    private final Set<String> claimedUnpushedDlrKeys = ConcurrentHashMap.newKeySet();
+    private final ConcurrentHashMap<String, UUID> claimedUnpushedDlrKeys = new ConcurrentHashMap<>();
+    private final IdentityHashMap<StandardMessage, UUID> claimedUnpushedDlrGenerations = new IdentityHashMap<>();
+    private final AtomicBoolean expiryInProgress = new AtomicBoolean();
     private volatile long lastExpiryCheck;
 
     public PostgresqlDlrStorage(DataSource dataSource) {
@@ -183,12 +234,19 @@ public class PostgresqlDlrStorage implements DlrStorage {
             return;
         }
 
-        List<MessageState> checkedStates = states.stream()
+        List<MessageState> suppliedStates = states.stream()
                 .map(state -> Objects.requireNonNull(state, "state"))
                 .toList();
-        List<UUID> gatewayMsgIds = checkedStates.stream()
-                .map(state -> parseGatewayId(state.getGatewayMsgId()))
-                .toList();
+        suppliedStates.forEach(this::validateCorrelationFields);
+        Map<UUID, MessageState> finalStatesByGateway = new LinkedHashMap<>();
+        for (MessageState state : suppliedStates) {
+            UUID gatewayMsgId = parseGatewayId(state.getGatewayMsgId());
+            // Reinsert duplicate IDs so batch order reflects each gateway's final occurrence.
+            finalStatesByGateway.remove(gatewayMsgId);
+            finalStatesByGateway.put(gatewayMsgId, state);
+        }
+        List<UUID> gatewayMsgIds = List.copyOf(finalStatesByGateway.keySet());
+        List<MessageState> checkedStates = List.copyOf(finalStatesByGateway.values());
         checkExpiry();
 
         try (Connection connection = dataSource.getConnection()) {
@@ -196,6 +254,32 @@ public class PostgresqlDlrStorage implements DlrStorage {
             try (PreparedStatement saveStates = connection.prepareStatement(SAVE_INITIAL_STATE_SQL);
                  PreparedStatement deleteCorrelations = connection.prepareStatement(DELETE_CORRELATIONS_SQL);
                  PreparedStatement saveCorrelations = connection.prepareStatement(SAVE_CORRELATION_SQL)) {
+                List<MessageState> correlatedStates = checkedStates.stream()
+                        .filter(state -> state.getProviderMessageId() != null)
+                        .sorted(Comparator.comparing(MessageState::getProviderName)
+                                .thenComparing(MessageState::getProviderMessageId))
+                        .toList();
+                String previousProviderName = null;
+                String previousProviderMessageId = null;
+                for (MessageState state : correlatedStates) {
+                    if (!state.getProviderName().equals(previousProviderName) ||
+                            !state.getProviderMessageId().equals(previousProviderMessageId)) {
+                        lockCorrelation(connection, state.getProviderName(), state.getProviderMessageId());
+                        previousProviderName = state.getProviderName();
+                        previousProviderMessageId = state.getProviderMessageId();
+                    }
+                }
+                List<UUID> messageIdsToLock = new ArrayList<>(gatewayMsgIds);
+                for (MessageState state : correlatedStates) {
+                    findCorrelationOwner(connection, state.getProviderName(), state.getProviderMessageId())
+                            .ifPresent(messageIdsToLock::add);
+                }
+                for (UUID messageId : messageIdsToLock.stream()
+                        .distinct()
+                        .sorted(Comparator.comparing(UUID::toString))
+                        .toList()) {
+                    lockMessage(connection, messageId);
+                }
                 int correlationCount = 0;
                 for (int index = 0; index < checkedStates.size(); index++) {
                     MessageState state = checkedStates.get(index);
@@ -204,9 +288,10 @@ public class PostgresqlDlrStorage implements DlrStorage {
                     saveStates.addBatch();
                     deleteCorrelations.setObject(1, gatewayMsgId);
                     deleteCorrelations.addBatch();
-                    if (state.getOperatorMsgId() != null) {
-                        saveCorrelations.setString(1, state.getOperatorMsgId());
-                        saveCorrelations.setObject(2, gatewayMsgId);
+                    if (state.getProviderMessageId() != null &&
+                            isLastCorrelationOwner(checkedStates, index, state)) {
+                        setCorrelationParameters(saveCorrelations, state.getProviderName(),
+                                state.getProviderMessageId(), gatewayMsgId);
                         saveCorrelations.addBatch();
                         correlationCount++;
                     }
@@ -215,11 +300,7 @@ public class PostgresqlDlrStorage implements DlrStorage {
                 saveStates.executeBatch();
                 deleteCorrelations.executeBatch();
                 if (correlationCount > 0) {
-                    for (int result : saveCorrelations.executeBatch()) {
-                        if (result == 0 || result == Statement.EXECUTE_FAILED) {
-                            throw new SQLException("Operator message ID is already linked to another gateway message");
-                        }
-                    }
+                    saveCorrelations.executeBatch();
                 }
                 connection.commit();
             } catch (SQLException e) {
@@ -232,30 +313,41 @@ public class PostgresqlDlrStorage implements DlrStorage {
     }
 
     @Override
-    public void linkOperatorId(String gatewayMsgId, String operatorMsgId) {
+    public void linkProviderMessageId(String gatewayMessageId, String providerName, String providerMessageId) {
         checkExpiry();
-        UUID gatewayId = parseGatewayId(gatewayMsgId);
+        requireCorrelation(providerName, providerMessageId);
+        UUID gatewayId = parseGatewayId(gatewayMessageId);
 
         for (int attempt = 0; attempt < linkMaxAttempts; attempt++) {
-            if (tryLinkOperatorId(gatewayId, operatorMsgId)) {
+            if (tryLinkProviderMessageId(gatewayId, providerName, providerMessageId)) {
                 return;
             }
             if (attempt + 1 < linkMaxAttempts) {
                 sleepBeforeLinkRetry();
             }
         }
-        throw new DlrStorageException("Gateway message state not found while linking operator ID");
+        throw new DlrStorageException("Gateway message state not found while linking provider message ID");
     }
 
     @Override
-    public Optional<MessageState> resolveAndRemoveDlr(String operatorMsgId, MessageState.MessageStatus status) {
+    public Optional<MessageState> resolveAndRemoveDlr(String providerName, String providerMessageId,
+                                                      MessageState.MessageStatus status) {
         Objects.requireNonNull(status, "status");
+        requireCorrelation(providerName, providerMessageId);
         checkExpiry();
 
         try (Connection connection = dataSource.getConnection()) {
             connection.setAutoCommit(false);
             try {
-                Optional<MessageState> state = lockResolvedState(connection, operatorMsgId, status);
+                lockCorrelation(connection, providerName, providerMessageId);
+                Optional<UUID> gatewayMessageId = findCorrelationOwner(
+                        connection, providerName, providerMessageId);
+                if (gatewayMessageId.isEmpty() || !lockMessage(connection, gatewayMessageId.get())) {
+                    connection.rollback();
+                    return Optional.empty();
+                }
+                Optional<MessageState> state = lockResolvedState(
+                        connection, providerName, providerMessageId, gatewayMessageId.get(), status);
                 if (state.isEmpty()) {
                     connection.rollback();
                     return Optional.empty();
@@ -280,7 +372,7 @@ public class PostgresqlDlrStorage implements DlrStorage {
              PreparedStatement statement = connection.prepareStatement(GET_STATE_SQL)) {
             statement.setObject(1, parseGatewayId(gatewayMsgId));
             try (ResultSet resultSet = statement.executeQuery()) {
-                return resultSet.next() ? Optional.of(readState(resultSet)) : Optional.empty();
+                return resultSet.next() ? Optional.of(readTrackedState(resultSet)) : Optional.empty();
             }
         } catch (SQLException e) {
             throw failure("read DLR state", e);
@@ -322,6 +414,7 @@ public class PostgresqlDlrStorage implements DlrStorage {
             statement.setBoolean(10, dlr.acked);
             statement.setInt(11, dlr.priority);
             setStringArray(connection, statement, 12, dlr.reassembledParts);
+            statement.setObject(13, UUID.randomUUID());
             return statement.executeUpdate() == 1;
         } catch (SQLException e) {
             throw failure("save unpushed DLR", e);
@@ -346,11 +439,17 @@ public class PostgresqlDlrStorage implements DlrStorage {
 
         String key = getUnpushedDlrKey(message);
         synchronized (unpushedDlrStateLock) {
+            UUID generationId = claimedUnpushedDlrGenerations.get(message);
+            if (generationId == null) {
+                return false;
+            }
             try (Connection connection = dataSource.getConnection();
                  PreparedStatement statement = connection.prepareStatement(DELETE_UNPUSHED_DLR_SQL)) {
                 statement.setString(1, key);
+                statement.setObject(2, generationId);
                 boolean removed = statement.executeUpdate() == 1;
-                claimedUnpushedDlrKeys.remove(key);
+                claimedUnpushedDlrGenerations.remove(message);
+                claimedUnpushedDlrKeys.remove(key, generationId);
                 return removed;
             } catch (SQLException e) {
                 throw failure("remove unpushed DLR", e);
@@ -365,7 +464,10 @@ public class PostgresqlDlrStorage implements DlrStorage {
         }
 
         synchronized (unpushedDlrStateLock) {
-            claimedUnpushedDlrKeys.remove(getUnpushedDlrKey(message));
+            UUID generationId = claimedUnpushedDlrGenerations.remove(message);
+            if (generationId != null) {
+                claimedUnpushedDlrKeys.remove(getUnpushedDlrKey(message), generationId);
+            }
         }
     }
 
@@ -383,8 +485,13 @@ public class PostgresqlDlrStorage implements DlrStorage {
                     List<StandardMessage> messages = new ArrayList<>();
                     while (resultSet.next()) {
                         String key = resultSet.getString("dlr_key");
-                        if (!claimForReplay || claimedUnpushedDlrKeys.add(key)) {
-                            messages.add(readUnpushedDlr(resultSet).toMessage());
+                        UUID generationId = resultSet.getObject("generation_id", UUID.class);
+                        StandardMessage message = readUnpushedDlr(resultSet).toMessage();
+                        if (!claimForReplay) {
+                            messages.add(message);
+                        } else if (claimedUnpushedDlrKeys.putIfAbsent(key, generationId) == null) {
+                            claimedUnpushedDlrGenerations.put(message, generationId);
+                            messages.add(message);
                         }
                     }
                     return messages;
@@ -429,16 +536,32 @@ public class PostgresqlDlrStorage implements DlrStorage {
         return value == null ? "" : value;
     }
 
-    private boolean tryLinkOperatorId(UUID gatewayMsgId, String operatorMsgId) {
+    private boolean tryLinkProviderMessageId(UUID gatewayMessageId, String providerName, String providerMessageId) {
         try (Connection connection = dataSource.getConnection()) {
             connection.setAutoCommit(false);
             try {
-                if (!markAsSent(connection, gatewayMsgId, operatorMsgId)) {
+                lockCorrelation(connection, providerName, providerMessageId);
+                Optional<UUID> previousOwner = findCorrelationOwner(connection, providerName, providerMessageId);
+                List<UUID> messageIdsToLock = new ArrayList<>();
+                messageIdsToLock.add(gatewayMessageId);
+                previousOwner.ifPresent(messageIdsToLock::add);
+                boolean targetFound = false;
+                for (UUID messageId : messageIdsToLock.stream()
+                        .distinct()
+                        .sorted(Comparator.comparing(UUID::toString))
+                        .toList()) {
+                    boolean found = lockMessage(connection, messageId);
+                    if (messageId.equals(gatewayMessageId)) {
+                        targetFound = found;
+                    }
+                }
+                if (!targetFound) {
                     connection.rollback();
                     return false;
                 }
-                if (!saveCorrelation(connection, gatewayMsgId, operatorMsgId)) {
-                    throw new SQLException("Operator message ID is already linked to another gateway message");
+                saveCorrelation(connection, providerName, providerMessageId, gatewayMessageId);
+                if (!markAsSent(connection, gatewayMessageId, providerName, providerMessageId)) {
+                    throw new SQLException("Gateway message state disappeared while linking provider message ID");
                 }
                 connection.commit();
                 return true;
@@ -447,15 +570,47 @@ public class PostgresqlDlrStorage implements DlrStorage {
                 throw e;
             }
         } catch (SQLException e) {
-            throw failure("link operator DLR ID", e);
+            throw failure("link provider DLR ID", e);
         }
     }
 
-    private boolean markAsSent(Connection connection, UUID gatewayMsgId,
-                               String operatorMsgId) throws SQLException {
+    private void lockCorrelation(Connection connection, String providerName,
+                                 String providerMessageId) throws SQLException {
+        try (PreparedStatement statement = connection.prepareStatement(LOCK_CORRELATION_SQL)) {
+            statement.setString(1, providerName);
+            statement.setString(2, providerMessageId);
+            statement.execute();
+        }
+    }
+
+    private Optional<UUID> findCorrelationOwner(Connection connection, String providerName,
+                                                String providerMessageId) throws SQLException {
+        try (PreparedStatement statement = connection.prepareStatement(GET_CORRELATION_OWNER_SQL)) {
+            statement.setString(1, providerName);
+            statement.setString(2, providerMessageId);
+            try (ResultSet resultSet = statement.executeQuery()) {
+                return resultSet.next() ?
+                        Optional.of(resultSet.getObject("gateway_message_id", UUID.class))
+                        : Optional.empty();
+            }
+        }
+    }
+
+    private boolean lockMessage(Connection connection, UUID gatewayMsgId) throws SQLException {
+        try (PreparedStatement statement = connection.prepareStatement(LOCK_MESSAGE_SQL)) {
+            statement.setObject(1, gatewayMsgId);
+            try (ResultSet resultSet = statement.executeQuery()) {
+                return resultSet.next();
+            }
+        }
+    }
+
+    private boolean markAsSent(Connection connection, UUID gatewayMessageId,
+                               String providerName, String providerMessageId) throws SQLException {
         try (PreparedStatement statement = connection.prepareStatement(LINK_MESSAGE_SQL)) {
-            statement.setString(1, operatorMsgId);
-            statement.setObject(2, gatewayMsgId);
+            statement.setString(1, providerName);
+            statement.setString(2, providerMessageId);
+            statement.setObject(3, gatewayMessageId);
             return statement.executeUpdate() == 1;
         }
     }
@@ -467,35 +622,72 @@ public class PostgresqlDlrStorage implements DlrStorage {
         statement.setString(3, state.getSystemId());
         statement.setString(4, state.getSourceAddr());
         statement.setString(5, state.getDestAddr());
-        statement.setString(6, state.getOperatorMsgId());
-        statement.setString(7, state.getForwardDlrUrl());
-        setStringArray(connection, statement, 8, state.getReassembledParts());
-        statement.setString(9, state.getStatus().name());
-        statement.setTimestamp(10, new Timestamp(state.getTimestamp()));
+        statement.setString(6, state.getProviderName());
+        statement.setString(7, state.getProviderMessageId());
+        statement.setString(8, state.getForwardDlrUrl());
+        setStringArray(connection, statement, 9, state.getReassembledParts());
+        statement.setString(10, state.getStatus().name());
+        statement.setObject(11, OffsetDateTime.ofInstant(
+                Instant.ofEpochMilli(state.getTimestamp()), ZoneOffset.UTC));
     }
 
-    private boolean saveCorrelation(Connection connection, UUID gatewayMsgId,
-                                    String operatorMsgId) throws SQLException {
+    private void saveCorrelation(Connection connection, String providerName,
+                                 String providerMessageId, UUID gatewayMessageId) throws SQLException {
         try (PreparedStatement statement = connection.prepareStatement(SAVE_CORRELATION_SQL)) {
-            statement.setString(1, operatorMsgId);
-            statement.setObject(2, gatewayMsgId);
-            return statement.executeUpdate() == 1;
+            setCorrelationParameters(statement, providerName, providerMessageId, gatewayMessageId);
+            statement.executeUpdate();
         }
     }
 
-    private Optional<MessageState> lockResolvedState(Connection connection, String operatorMsgId,
-                                                     MessageState.MessageStatus status) throws SQLException {
+    private void setCorrelationParameters(PreparedStatement statement, String providerName,
+                                          String providerMessageId, UUID gatewayMessageId) throws SQLException {
+        statement.setString(1, providerName);
+        statement.setString(2, providerMessageId);
+        statement.setObject(3, gatewayMessageId);
+        statement.setString(4, providerName);
+        statement.setString(5, providerMessageId);
+        statement.setObject(6, gatewayMessageId);
+    }
+
+    private void validateCorrelationFields(MessageState state) {
+        if (state.getProviderName() == null && state.getProviderMessageId() == null) {
+            return;
+        }
+        if (state.getProviderName() == null || state.getProviderName().isBlank() ||
+                state.getProviderMessageId() == null || state.getProviderMessageId().isBlank()) {
+            throw new IllegalArgumentException(
+                    "Provider name and provider message ID must either both be set or both be absent");
+        }
+    }
+
+    private boolean isLastCorrelationOwner(List<MessageState> states, int index, MessageState candidate) {
+        for (int laterIndex = index + 1; laterIndex < states.size(); laterIndex++) {
+            MessageState later = states.get(laterIndex);
+            if (candidate.getProviderName().equals(later.getProviderName()) &&
+                    candidate.getProviderMessageId().equals(later.getProviderMessageId())) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private void requireCorrelation(String providerName, String providerMessageId) {
+        if (providerName == null || providerName.isBlank() ||
+                providerMessageId == null || providerMessageId.isBlank()) {
+            throw new IllegalArgumentException("Provider name and provider message ID must not be blank");
+        }
+    }
+
+    private Optional<MessageState> lockResolvedState(Connection connection, String providerName,
+                                                      String providerMessageId,
+                                                      UUID gatewayMessageId,
+                                                      MessageState.MessageStatus status) throws SQLException {
         try (PreparedStatement statement = connection.prepareStatement(RESOLVE_STATE_SQL)) {
-            statement.setString(1, operatorMsgId);
+            statement.setString(1, providerName);
+            statement.setString(2, providerMessageId);
+            statement.setObject(3, gatewayMessageId);
             try (ResultSet resultSet = statement.executeQuery()) {
-                if (!resultSet.next()) {
-                    return Optional.empty();
-                }
-                MessageState state = readState(resultSet);
-                state.setOperatorMsgId(resultSet.getString("operator_message_id"));
-                state.setStatus(status);
-                state.setTimestamp(resultSet.getTimestamp("resolved_at").getTime());
-                return Optional.of(state);
+                return resultSet.next() ? Optional.of(readResolvedState(resultSet, status)) : Optional.empty();
             }
         }
     }
@@ -507,7 +699,7 @@ public class PostgresqlDlrStorage implements DlrStorage {
         }
     }
 
-    private MessageState readState(ResultSet resultSet) throws SQLException {
+    private MessageState readBaseState(ResultSet resultSet) throws SQLException {
         MessageState state = new MessageState(
                 resultSet.getObject("gateway_message_id", UUID.class).toString(),
                 resultSet.getString("account_id"),
@@ -515,24 +707,36 @@ public class PostgresqlDlrStorage implements DlrStorage {
                 resultSet.getString("source_address"),
                 resultSet.getString("destination_address"),
                 resultSet.getString("forward_dlr_url"));
-        state.setOperatorMsgId(resultSet.getString("operator_message_id"));
-        if (hasColumn(resultSet, "status")) {
-            state.setStatus(MessageState.MessageStatus.valueOf(resultSet.getString("status")));
-        }
+        state.setProviderName(resultSet.getString("provider_name"));
+        state.setProviderMessageId(resultSet.getString("provider_message_id"));
         state.setReassembledParts(readStringArray(resultSet, "reassembled_parts"));
-        if (hasColumn(resultSet, "updated_at")) {
-            state.setTimestamp(resultSet.getTimestamp("updated_at").getTime());
-        }
         return state;
     }
 
-    private boolean hasColumn(ResultSet resultSet, String columnName) throws SQLException {
-        for (int index = 1; index <= resultSet.getMetaData().getColumnCount(); index++) {
-            if (columnName.equalsIgnoreCase(resultSet.getMetaData().getColumnLabel(index))) {
-                return true;
-            }
-        }
-        return false;
+    /**
+     * Reads a {@link #GET_STATE_SQL} row, which carries the stored status and update time.
+     */
+    private MessageState readTrackedState(ResultSet resultSet) throws SQLException {
+        MessageState state = readBaseState(resultSet);
+        state.setStatus(MessageState.MessageStatus.valueOf(resultSet.getString("status")));
+        state.setTimestamp(readEpochMillis(resultSet, "updated_at"));
+        return state;
+    }
+
+    /**
+     * Reads a {@link #RESOLVE_STATE_SQL} row, which carries the provider message ID and resolution time.
+     */
+    private MessageState readResolvedState(ResultSet resultSet,
+                                           MessageState.MessageStatus status) throws SQLException {
+        MessageState state = readBaseState(resultSet);
+        state.setStatus(status);
+        state.setTimestamp(readEpochMillis(resultSet, "resolved_at"));
+        return state;
+    }
+
+    private long readEpochMillis(ResultSet resultSet, String columnName) throws SQLException {
+        OffsetDateTime value = resultSet.getObject(columnName, OffsetDateTime.class);
+        return value == null ? 0L : value.toInstant().toEpochMilli();
     }
 
     private List<String> readStringArray(ResultSet resultSet, String columnName) throws SQLException {
@@ -540,7 +744,8 @@ public class PostgresqlDlrStorage implements DlrStorage {
         if (array == null) {
             return null;
         }
-        return new ArrayList<>(List.of((String[]) array.getArray()));
+        //Arrays.asList, not List.of: a text[] column can legally hold NULL elements
+        return new ArrayList<>(Arrays.asList((String[]) array.getArray()));
     }
 
     private void setStringArray(Connection connection, PreparedStatement statement, int index,
@@ -557,48 +762,65 @@ public class PostgresqlDlrStorage implements DlrStorage {
             Thread.sleep(linkRetryIntervalMillis);
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-            throw new DlrStorageException("Interrupted while linking operator ID", e);
+            throw new DlrStorageException("Interrupted while linking provider message ID", e);
         }
     }
 
+    /**
+     * Runs retention cleanup at most once per interval, on the thread that first observes the interval has elapsed.
+     * Cleanup is best-effort maintenance: at most one thread runs it, every other caller proceeds immediately, and a
+     * failed pass is logged and retried after the next interval instead of failing the operation that triggered it.
+     */
     private void checkExpiry() {
-        long now = System.currentTimeMillis();
-        if (now - lastExpiryCheck < expiryCheckIntervalMillis) {
+        if (System.currentTimeMillis() - lastExpiryCheck < expiryCheckIntervalMillis) {
             return;
         }
-        synchronized (this) {
-            if (now - lastExpiryCheck < expiryCheckIntervalMillis) {
+        if (!expiryInProgress.compareAndSet(false, true)) {
+            return;
+        }
+        try {
+            if (System.currentTimeMillis() - lastExpiryCheck < expiryCheckIntervalMillis) {
                 return;
             }
             deleteExpiredState();
-            lastExpiryCheck = now;
+        } catch (RuntimeException e) {
+            logger.warn("DLR retention cleanup failed; retrying after the next interval");
+        } finally {
+            lastExpiryCheck = System.currentTimeMillis();
+            expiryInProgress.set(false);
         }
     }
 
     private void deleteExpiredState() {
-        synchronized (unpushedDlrStateLock) {
-            List<String> expiredUnpushedDlrKeys = new ArrayList<>();
-            try (Connection connection = dataSource.getConnection()) {
-                connection.setAutoCommit(false);
-                try (PreparedStatement correlations = connection.prepareStatement(DELETE_EXPIRED_CORRELATIONS_SQL);
-                     PreparedStatement messages = connection.prepareStatement(DELETE_EXPIRED_MESSAGES_SQL);
-                     PreparedStatement unpushedDlrs = connection.prepareStatement(DELETE_EXPIRED_UNPUSHED_DLRS_SQL)) {
-                    correlations.executeUpdate();
-                    messages.executeUpdate();
-                    try (ResultSet resultSet = unpushedDlrs.executeQuery()) {
-                        while (resultSet.next()) {
-                            expiredUnpushedDlrKeys.add(resultSet.getString("dlr_key"));
-                        }
+        Map<String, UUID> expiredUnpushedDlrKeys = new HashMap<>();
+        try (Connection connection = dataSource.getConnection()) {
+            connection.setAutoCommit(false);
+            try (PreparedStatement correlations = connection.prepareStatement(DELETE_EXPIRED_CORRELATIONS_SQL);
+                 PreparedStatement messages = connection.prepareStatement(DELETE_EXPIRED_MESSAGES_SQL);
+                 PreparedStatement unpushedDlrs = connection.prepareStatement(DELETE_EXPIRED_UNPUSHED_DLRS_SQL)) {
+                // Rebinding also locks tracked messages before correlations; retain the same order to avoid deadlocks.
+                messages.executeUpdate();
+                correlations.executeUpdate();
+                try (ResultSet resultSet = unpushedDlrs.executeQuery()) {
+                    while (resultSet.next()) {
+                        expiredUnpushedDlrKeys.put(
+                                resultSet.getString("dlr_key"),
+                                resultSet.getObject("generation_id", UUID.class));
                     }
-                    connection.commit();
-                    claimedUnpushedDlrKeys.removeAll(expiredUnpushedDlrKeys);
-                } catch (SQLException e) {
-                    rollback(connection, e);
-                    throw e;
                 }
+                connection.commit();
             } catch (SQLException e) {
-                throw failure("expire DLR state", e);
+                rollback(connection, e);
+                throw e;
             }
+        } catch (SQLException e) {
+            throw failure("expire DLR state", e);
+        }
+        synchronized (unpushedDlrStateLock) {
+            expiredUnpushedDlrKeys.forEach(claimedUnpushedDlrKeys::remove);
+            HashSet<UUID> expiredGenerations = new HashSet<>(expiredUnpushedDlrKeys.values());
+            claimedUnpushedDlrGenerations.entrySet()
+                    .removeIf(entry -> expiredGenerations.contains(entry.getValue()));
         }
     }
 
@@ -618,7 +840,15 @@ public class PostgresqlDlrStorage implements DlrStorage {
         }
     }
 
+    /**
+     * Logs the database cause server-side and returns a caller-facing exception that carries no connection details.
+     * The one-line summary keeps an outage diagnosable without a stack trace per rejected message; the full cause is
+     * available at debug level.
+     */
     private DlrStorageException failure(String operation, SQLException cause) {
+        logger.error("Failed to {}: sqlState={} errorCode={} reason={}",
+                operation, cause.getSQLState(), cause.getErrorCode(), cause.getMessage());
+        logger.debug("DLR storage failure details while attempting to {}", operation, cause);
         return new DlrStorageException("Failed to " + operation, cause);
     }
 }
